# cams-mcp

./: .env.example  .gitignore  LICENSE  README.md  cams-biometrics.mcpb  pyproject.toml
examples/: claude_desktop_config.json
src/cams_biometrics_mcp/: __init__.py  server.py
src/cams_biometrics_mcp/config/: config.py
src/cams_biometrics_mcp/controllers/: __init__.py  handler_tool_controller.py
src/cams_biometrics_mcp/routes/: __init__.py  tool_routes.py
